# eog-learn

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  requirements_doc.txt
.github/workflows/: build_docs.yml  test_installation.yaml  test_style.yml
docs/: conf.py  contributing.rst  implementation.rst  index.rst  installation.rst
docs/API/: API_index.rst  datasets.rst  io.rst  models.rst
eoglearn/: __init__.py  conftest.py
eoglearn/assets/: sample-trans.fif
eoglearn/datasets/: __init__.py  eegeyenet.py  eegeyenet_urls.csv  mne.py  utils.py
eoglearn/datasets/tests/: test_datasets.py
eoglearn/io/: __init__.py  eegeyenet.py
eoglearn/io/tests/: test_io.py
eoglearn/models/: __init__.py  model.py
eoglearn/models/tests/: test_models.py
eoglearn/viz/: __init__.py  _training.py  topo.py
examples/: README.txt  plot_eegeyenet.py  plot_model.py
meeg_eyekit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
notebooks/paper/: LSTM_compute_xr.ipynb
paper_2024/: LSTM_compute_xr.ipynb  run_eog_lstm_regression.py
scripts/: run_eog_lstm_ica_mp.py  run_eog_lstm_regression.py  run_eog_lstm_regression_mp.py
scripts/slurm/: run_eog_lstm.sbatch
slurm/: LSTM_compute_xr.ipynb  Pytorch_EOG_LSTM_analysis.ipynb  run_eog_lstm.sbatch  run_eog_lstm_ica_mp.py  run_eog_lstm_regression.py  run_eog_lstm_regression_mp.py
